--- a/templates/ajax/ajax.html.twig
+++ b/templates/ajax/ajax.html.twig
@@ -121,15 +121,7 @@
             }
         });
         {% if custom_css is defined and custom_css != '' %}
-        if(!document.getElementsByTagName('body')[0].classList.contains('{{ custom_css }}'))
-            document.getElementsByTagName('body')[0].classList.add('{{ custom_css }}');
-        {% else %}
-        for (let index = 0; index < document.getElementsByTagName('body')[0].classList.length; index++) {
-            let css = document.getElementsByTagName('body')[0].classList[index];
-            if(css !== 'online_body' && css !== 'offline_body') {
-                document.getElementsByTagName('body')[0].classList.remove(css);
-            }
-        }
+            document.body.classList.add('{{ custom_css }}');
         {% endif %}
         
         {% if block('title') is defined %}
