Corrected referal page title

--- a/templates/ajax/soul/refer.html.twig
+++ b/templates/ajax/soul/refer.html.twig
@@ -1,5 +1,5 @@
 {% extends "ajax/soul/shell.html.twig" %}
-{% block title %}{{'Die verfluchten Schriften'|trans({}, 'game')}}{% endblock %}
+{% block title %}{{'Wir werden alle sterben: Sag es weiter!'|trans({}, 'game')}}{% endblock %}
 {% block soul_content %}
     <div class="row">
         <div class="cell rw-12 center friend hide-md hide-sm"> </div>
