--- a/assets/less/mixins.less
+++ b/assets/less/mixins.less
@@ -100,3 +100,5 @@ button.button-dropdown-button, div.button.button-dropdown-button, div.forum-butt
     display: block;
   }
 }
+
+.clear {clear: both;}
