--- a/templates/ajax/game/town/bank.html.twig
+++ b/templates/ajax/game/town/bank.html.twig
@@ -50,10 +50,13 @@
             {% endembed %}
         </div>
 
-        <div class="padded cell rw-6 rw-lg-12 hide-sm" style="position: relative; min-height: 180px;">
-            <div class="forum-preview-container" style="position: absolute; left: 3px; top: 3px; right: 3px; bottom: 3px">
-                <div id="forum-content">
-                    <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+        <div class="padded cell rw-6 rw-lg-12">
+            <h5 class="hide-desktop">{{ 'Diskussionen rund um die Bank'|trans({},'game') }}</h5>
+            <div class="forum-preview-wrapper forum-preview-wrapper-bank">
+                <div class="forum-preview-container">
+                    <div id="forum-content">
+                        <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+                    </div>
                 </div>
             </div>
         </div>
