--- a/assets/less/mobile.less
+++ b/assets/less/mobile.less
@@ -97,6 +97,12 @@
       flex-basis: 50%;
     }
   }
+  .forum-preview-wrapper {
+    max-height: 360px;
+    &.forum-preview-wrapper-bank {
+      min-height: 360px;
+    }
+  }
 }
 @media (max-width: (@screen-medium-threshold - 1)) and (min-width: @screen-small-threshold) {
   .hide-@{screen-medium} {display: none !important;};
@@ -110,6 +116,12 @@
   }
   ul.actions>li, ul.special_actions>li, ul.heroic_actions>li {
     &>div.targets { left: 0; right: 0; top: 100%; }
+  }
+  .forum-preview-wrapper {
+    max-height: 180px;
+    &.forum-preview-wrapper-bank {
+      min-height: 180px;
+    }
   }
 }
 @media (max-width: (@screen-small-threshold - 1)) {
@@ -217,6 +229,15 @@
   div[x-conditional-help="beyond_half_ap"] {
     position: fixed; top: 50px; left: 10px; right: 10px; width: auto;
     &:before {display: none}
+  }
+
+  .forum-preview-wrapper {
+    .forum-preview-container { border: none; }
+
+    &.forum-preview-wrapper-bank {
+      min-height: 0;
+      .forum-preview-container { position: unset; top: 0; left: 0; right: 0; bottom: 0; }
+    }
   }
 }
 
