--- a/templates/ajax/game/town/construction.html.twig
+++ b/templates/ajax/game/town/construction.html.twig
@@ -31,12 +31,15 @@
         {% endif %}
     {% endif %}
 
-    <h5 class="hide-sm">{{ 'Diskussionen rund um Bauprojekte'|trans({},'game') }}</h5>
-    <div class="forum-preview-container fix-height hide-sm">
-        <div id="forum-content">
-            <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+    <h5>{{ 'Diskussionen rund um Bauprojekte'|trans({},'game') }}</h5>
+    <div class="forum-preview-wrapper forum-preview-wrapper-construction">
+        <div class="forum-preview-container">
+            <div id="forum-content">
+                <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+            </div>
         </div>
     </div>
+
 
     <h5>{{ 'Vorhandene Bauprojekte'|trans({},'game') }}</h5>
     {% if canvote %}
@@ -289,7 +292,7 @@
         }
 
         $.ajax.background().no_history().load( document.getElementById('forum-content'), '{{ path('forum_previewer_controller', {fid: town.forum.id, sem: constant('App\\Entity\\Thread::SEMANTIC_CONSTRUCTIONS') })|e('js') }}', false, {}, function() {
-            let container = document.querySelector('.forum-preview-container');
+            let container = document.querySelector('.forum-preview-wrapper');
             container.scrollTop = container.scrollHeight;
         } );
     </script>
