--- a/templates/ajax/game/town/upgrades.html.twig
+++ b/templates/ajax/game/town/upgrades.html.twig
@@ -30,10 +30,12 @@
         </div>
     {% endif %}
 
-    <h5 class="hide-sm">{{ 'Diskussionen rund um die Verbesserung des Tages'|trans({},'game') }}</h5>
-    <div class="forum-preview-container fix-height hide-sm">
-        <div id="forum-content">
-            <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+    <h5>{{ 'Diskussionen rund um die Verbesserung des Tages'|trans({},'game') }}</h5>
+    <div class="forum-preview-wrapper forum-preview-wrapper-upgrades">
+        <div class="forum-preview-container">
+            <div id="forum-content">
+                <div class="center"><i class="fa fa-spin fa-circle-notch"></i> {{ 'Lade Forum...'|trans({},'game') }}</div>
+            </div>
         </div>
     </div>
 
@@ -103,7 +105,7 @@
                     } );
             });
         $.ajax.background().no_history().load( document.getElementById('forum-content'), '{{ path('forum_previewer_controller', {fid: town.forum.id, sem: constant('App\\Entity\\Thread::SEMANTIC_DAILYVOTE') })|e('js') }}', false, {}, function() {
-            let container = document.querySelector('.forum-preview-container');
+            let container = document.querySelector('.forum-preview-wrapper');
             container.scrollTop = container.scrollHeight;
         } );
     </script>
