--- a/templates/ajax/admin/users/account.html.twig
+++ b/templates/ajax/admin/users/account.html.twig
@@ -295,7 +295,9 @@
                             {{ 'EternalTwin-Konto'|trans({}, 'admin') }}
                         </div>
                         <div class="cell padded rw-3 rw-sm-12">
-                            {{ user.eternalID ?? '-' }}
+                            {% if user.eternalID is not null %}
+                                <a target="_blank" href="https://eternal-twin.net/users/{{ user.eternalID }}"><i class="fa fa-external-link-alt"></i> {{ user.eternalID }}</a><br />
+                            {% else %} - {% endif %}
                         </div>
                         <div class="cell padded rw-3 rw-sm-12 note note-lightest">
                             {{ 'Twinoid-Konto'|trans({}, 'admin') }}
