--- a/templates/ajax/admin/groups/edit.html.twig
+++ b/templates/ajax/admin/groups/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends "ajax/ajax.html.twig" %}
 {% block title %}{% if current_group is null %}{{ 'Neue Gruppe'|trans({}, 'admin') }}{% else %}{{ 'Gruppe "{group}"'|trans({'{group}': current_group.usergroup.name}, "admin")|raw }}{% endif %}{% endblock %}
 {% block ajax %}
-    {# @var current_season \App\Entity\Season #}
+    {# @var current_group \App\Entity\OfficialGroup #}
     <div class="row">
         <div class="padded cell rw-12">
 
@@ -13,7 +13,7 @@
                     <div class="cell padded rw-4">
                         <select id="group-lang">
                             {% for lang in ['de','fr','en','es','multi'] %}
-                                <option value="{{ lang }}">{{ lang }}</option>
+                                <option value="{{ lang }}"{% if current_group.lang == lang %} selected{% endif %}>{{ lang }}</option>
                             {% endfor %}
                         </select>
                     </div>
