Added less icon, 1st poc for a 128x128px icon

--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1333,6 +1333,10 @@ div.tooltip {
   font-weight: normal;
   font-variant: normal;
 
+  img {
+    width: 16px;
+  }
+
   strong.red {
     color :#cf7058;
   }
