--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -626,7 +626,7 @@ ul.list{
   max-width: 6px;
   background-color: #ba6767;
   border-bottom: 1px solid #7e4d2a;
-  margin: 0px 0px 0px 0px;
+  margin: 0;
   position: relative;
 }
 
@@ -894,6 +894,44 @@ ul.list{
     margin: 0;
     strong {
       color: white;
+    }
+  }
+}
+
+#council {
+  position: relative;
+  display: inline-block;
+  max-width: 100%;
+
+  &>img { max-width: 100%; height: auto; }
+  &>div {
+    position: absolute; top: 20px; bottom: 20px; left: 0; right: 0; padding: 0 20px; overflow-y: auto;
+    &>div {
+      font-family:"Courier new", "Courier", monospace; color:#3b3249; font-weight:bold; letter-spacing: 0; text-align: left;
+      font-size: 8pt; line-height: 9pt; margin-bottom: 3px;
+      &:first-letter { font-size: 12pt; font-weight: bold; text-transform: uppercase; }
+      &.status { color: black; }
+
+      &>span.author {
+
+      }
+      &>span {
+        &.author {
+          &.color-1 { color: #8d5e3e }
+          &.color-2 { color: #aa7d52 }
+          &.color-3 { color: #ae6b68 }
+          &.color-4 { color: #6f3f3c }
+          &.color-5 { color: #6b6d8d }
+          &.color-6 { color: #3c374f }
+          &.color-7 { color: #3c3549 }
+          &.color-8 { color: #4f553c }
+          &.color-9 { color: #728d2c }
+          &.color-0 { color: #384315 }
+
+          &:after { content: ":"; padding: 0 6px; }
+        }
+        &:not(.author) { color: black; text-decoration: underline; }
+      }
     }
   }
 }
