--- a/templates/ajax/game/newspaper.html.twig
+++ b/templates/ajax/game/newspaper.html.twig
@@ -9,8 +9,8 @@
     <div class="row">
         <div class="padded cell rw-12">
             <input type="checkbox" name="gazette-switch" id="gazette-switch" />
-            {% include 'ajax/game/gazette_widget.html.twig' with { gazette: gazette } %}
-            <div id="gazette-switcher"><label class="button" for="gazette-switch">{{ 'Umdrehen'|trans({}, 'game') }}</label></div>
+            {% include 'ajax/game/gazette_widget.html.twig' with { gazette: gazette, council: council } %}
+
             {% if citizensWithRole|length > 0 %}
             <h5>{{ 'Stadtrat'|trans({}, 'game') }}</h5>
             <div id="gazette-role-list">
