--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -1399,6 +1399,20 @@ div.tooltip {
     }
   }
 
+  &.item {
+    color: #dfdad2;
+    border: 1px solid #ab9d89;
+    border-bottom-color: black;
+    border-right-color: black;
+    background-color: #746652;
+    outline: 1px solid #5c2b20;
+    &>h1:first-child {
+      color: white;
+      text-align: right;
+      border-bottom-color: white;
+    }
+  }
+
   &.forum-tooltip {
     background: #5c2b20;
     border: 1px solid #f0d79e;
