--- a/templates/ajax/game/item_tooltip.html.twig
+++ b/templates/ajax/game/item_tooltip.html.twig
@@ -1,4 +1,4 @@
-<div class="tooltip normal">
+<div class="tooltip item">
     {% set virtual = false %}
     {% if item|instance_of('App\\Entity\\ItemPrototype') %}
         {% set virtual = true %}
