--- a/templates/ajax/game/item_proto_tooltip.html.twig
+++ b/templates/ajax/game/item_proto_tooltip.html.twig
@@ -1,4 +1,4 @@
-<div class="tooltip normal">
+<div class="tooltip item">
     <h1>{{ item.label|trans({},'items') }} <img src="{{ asset('build/images/item/item_' ~ item.icon ~ '.gif') }}" alt="{{ item.label|trans({},'items') }}"></h1>
     {{ item.description|trans({},'items') }}
     {% if item.hasProperty('is_water') and app.user.activeCitizen is not null and app.user.activeCitizen.hasStatus('hasdrunk') %}
