--- a/templates/ajax/admin/apps/list.html.twig
+++ b/templates/ajax/admin/apps/list.html.twig
@@ -1,5 +1,9 @@
 {% extends "ajax/ajax.html.twig" %}
 {% block title %}{{ 'Anwendungen'|trans({},'admin') }}{% endblock %}
+{% block menu_text %}
+    {{parent()}}
+    <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
+{% endblock %}
 {% block ajax %}
     <div class="row">
         <div class="padded cell rw-12">
