--- a/templates/ajax/admin/dash.html.twig
+++ b/templates/ajax/admin/dash.html.twig
@@ -1,4 +1,13 @@
 {% extends "ajax/ajax.html.twig" %}
+{% block menu_text %}
+    {{parent()}}
+    <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
+{% endblock %}
+{% block title %}{% if is_granted('ROLE_CROW') %}
+    {% trans from 'admin' %}Admin Dashboard{% endtrans %}
+{% else %}
+    {% trans from 'admin' %}Community Dashboard{% endtrans %}
+{% endif %}{% endblock %}
 {% block ajax %}
     {% if not is_granted('ROLE_REGISTERED') %}
         <div class="row">
