--- a/templates/ajax/soul/view_town_foreign.html.twig
+++ b/templates/ajax/soul/view_town_foreign.html.twig
@@ -1,4 +1,8 @@
 {% extends "ajax/ajax.html.twig" %}
+{% block menu_text %}
+    {{parent()}}
+    <li class="back-dash" x-ajax-href="{{ url('game_landing') }}">{{ 'Zum Spiel'|trans({},'global') }}</li>
+{% endblock %}
 {% block ajax %}
     {# @var town \App\Entity\TownRankingProxy #}
     <div class="row soul">
